{
  "version": 4,
  "terraform_version": "1.10.5",
  "serial": 277,
  "lineage": "8040fca6-ae05-65e9-07d3-07130a1b5e03",
  "resources": [
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "test-vpc_sg_default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:739275468464:security-group/sg-0420d25a3fa9f9cc2",
            "description": "default VPC security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0420d25a3fa9f9cc2",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "default",
            "name_prefix": "",
            "owner_id": "739275468464",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "vpc_id": "vpc-0d5da813b6557d700"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "test-eks_sg_controlplane",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:739275468464:security-group/sg-027faf7d9c142c298",
            "description": "Communication between the control plane and worker nodegroups",
            "egress": [
              {
                "cidr_blocks": [],
                "description": "Allow Cluster API Server to communicate with the worker nodes",
                "from_port": 1025,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0ed5d0d924aa14f51"
                ],
                "self": false,
                "to_port": 65535
              }
            ],
            "id": "sg-027faf7d9c142c298",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow nodes to communicate with the cluster API Server",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0ed5d0d924aa14f51"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "Test-EKS-SG-ControlPlane",
            "name_prefix": "",
            "owner_id": "739275468464",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Test-EKS-ControlPlane-SG"
            },
            "tags_all": {
              "Name": "Test-EKS-ControlPlane-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d5da813b6557d700"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "test-eks_sg_nodes",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:739275468464:security-group/sg-0ed5d0d924aa14f51",
            "description": "Security group for worker nodes in Cluster",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ed5d0d924aa14f51",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow nodes to communicate with each other",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": "Allow ssh worker Kubelets and pods to receive communication from the cluster control plane",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-027faf7d9c142c298"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "Allow worker Kubelets and pods to receive communication from the cluster control plane",
                "from_port": 1025,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-027faf7d9c142c298"
                ],
                "self": false,
                "to_port": 65535
              }
            ],
            "name": "Test-EKS-SG-NodeGroup",
            "name_prefix": "",
            "owner_id": "739275468464",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Test-EKS-NodeGroup-SG"
            },
            "tags_all": {
              "Name": "Test-EKS-NodeGroup-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d5da813b6557d700"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "test-eks_sg_cluster_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow nodes to communicate with the cluster API Server",
            "from_port": 443,
            "id": "sgrule-194548728",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-027faf7d9c142c298",
            "security_group_rule_id": "sgr-0518faa721f9d8ee0",
            "self": false,
            "source_security_group_id": "sg-0ed5d0d924aa14f51",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security_group.aws_security_group.test-eks_sg_controlplane",
            "module.security_group.aws_security_group.test-eks_sg_nodes",
            "module.vpc.aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "test-eks_sg_cluster_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow Cluster API Server to communicate with the worker nodes",
            "from_port": 1025,
            "id": "sgrule-666592959",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-027faf7d9c142c298",
            "security_group_rule_id": "sgr-037bcbffbb64f3575",
            "self": false,
            "source_security_group_id": "sg-0ed5d0d924aa14f51",
            "timeouts": null,
            "to_port": 65535,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security_group.aws_security_group.test-eks_sg_controlplane",
            "module.security_group.aws_security_group.test-eks_sg_nodes",
            "module.vpc.aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "test-eks_sg_nodes_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow worker Kubelets and pods to receive communication from the cluster control plane",
            "from_port": 1025,
            "id": "sgrule-4085868990",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0ed5d0d924aa14f51",
            "security_group_rule_id": "sgr-0693ad150cc23f644",
            "self": false,
            "source_security_group_id": "sg-027faf7d9c142c298",
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security_group.aws_security_group.test-eks_sg_controlplane",
            "module.security_group.aws_security_group.test-eks_sg_nodes",
            "module.vpc.aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "test-eks_sg_nodes_internal",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow nodes to communicate with each other",
            "from_port": 0,
            "id": "sgrule-18085732",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0ed5d0d924aa14f51",
            "security_group_rule_id": "sgr-0a6a2178c76ed0528",
            "self": false,
            "source_security_group_id": "sg-0ed5d0d924aa14f51",
            "timeouts": null,
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security_group.aws_security_group.test-eks_sg_nodes",
            "module.vpc.aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "test-eks_sg_nodes_ssh_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow ssh worker Kubelets and pods to receive communication from the cluster control plane",
            "from_port": 443,
            "id": "sgrule-1107918147",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0ed5d0d924aa14f51",
            "security_group_rule_id": "sgr-0a618ab504b674adc",
            "self": false,
            "source_security_group_id": "sg-027faf7d9c142c298",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security_group.aws_security_group.test-eks_sg_controlplane",
            "module.security_group.aws_security_group.test-eks_sg_nodes",
            "module.vpc.aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.subnet",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "eks-public-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:739275468464:subnet/subnet-0371f5769aa1ccc15",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "172.31.0.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0371f5769aa1ccc15",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "739275468464",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "eks-public-subnet1",
              "kubernetes.io/cluster/eks-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "eks-public-subnet1",
              "kubernetes.io/cluster/eks-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0d5da813b6557d700"
          },
          "dependencies": [
            "module.vpc.aws_vpc.eks_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:739275468464:subnet/subnet-0327342d20e226a91",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "172.31.16.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0327342d20e226a91",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "739275468464",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "eks-public-subnet2",
              "kubernetes.io/cluster/eks-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "eks-public-subnet2",
              "kubernetes.io/cluster/eks-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0d5da813b6557d700"
          },
          "dependencies": [
            "module.vpc.aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "eks_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:739275468464:internet-gateway/igw-0563b37e37dc6ca3a",
            "id": "igw-0563b37e37dc6ca3a",
            "owner_id": "739275468464",
            "tags": {
              "Name": "eks-igw"
            },
            "tags_all": {
              "Name": "eks-igw"
            },
            "vpc_id": "vpc-0d5da813b6557d700"
          },
          "dependencies": [
            "module.vpc.aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "eks_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:739275468464:route-table/rtb-066a1f948e8a68f6b",
            "id": "rtb-066a1f948e8a68f6b",
            "owner_id": "739275468464",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0563b37e37dc6ca3a",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "eks-route-table"
            },
            "tags_all": {
              "Name": "eks-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d5da813b6557d700"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.eks_igw",
            "module.vpc.aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "test-route-association-pub-sub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fe66eecbd880265c",
            "route_table_id": "rtb-066a1f948e8a68f6b",
            "subnet_id": "subnet-0371f5769aa1ccc15"
          },
          "dependencies": [
            "module.subnet.aws_subnet.eks-public-subnet",
            "module.vpc.aws_internet_gateway.eks_igw",
            "module.vpc.aws_route_table.eks_route_table",
            "module.vpc.aws_vpc.eks_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-063a66af082a1abcd",
            "route_table_id": "rtb-066a1f948e8a68f6b",
            "subnet_id": "subnet-0327342d20e226a91"
          },
          "dependencies": [
            "module.subnet.aws_subnet.eks-public-subnet",
            "module.vpc.aws_internet_gateway.eks_igw",
            "module.vpc.aws_route_table.eks_route_table",
            "module.vpc.aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "eks_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:739275468464:vpc/vpc-0d5da813b6557d700",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.31.0.0/16",
            "default_network_acl_id": "acl-06def0eee15c45f8b",
            "default_route_table_id": "rtb-0f79841f388cbdd08",
            "default_security_group_id": "sg-0420d25a3fa9f9cc2",
            "dhcp_options_id": "dopt-01ab8ab4d11e4b949",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0d5da813b6557d700",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0f79841f388cbdd08",
            "owner_id": "739275468464",
            "tags": {
              "Name": "eks-vpc"
            },
            "tags_all": {
              "Name": "eks-vpc"
            }
          }
        }
      ]
    }
  ]
}